# UXO_system

./: README.md
Parrot_drone/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
Parrot_drone/install/parrot_drone/lib/parrot_drone/: fly_drone
Parrot_drone/install/parrot_drone/share/parrot_drone/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Parrot_drone/log/: latest_build
Parrot_drone/src/: setup.cfg  setup.py
Parrot_drone/src/parrot_drone/: drone_setup.py  fly_drone.py
ros2_test_ws/: gps_subscriber.py
ros2_test_ws/src/: Changes.txt
ros2_test_ws/src/d1_550_description/: package.xml
ros2_test_ws/src/d1_550_description/urdf/: d1_550_description.urdf
ros2_test_ws/src/d1_moveit_config/: .setup_assistant
ros2_test_ws/src/d1_moveit_config/config/: d1_550_description.srdf  d1_550_description.urdf.xacro  initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml
ros2_test_ws/src/d1_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  static_virtual_joint_tfs.launch.py
ros2_test_ws/src/go2_robot_sdk/: setup.py
ros2_test_ws/src/go2_robot_sdk/config/: nav2_params.yaml
ros2_test_ws/src/go2_robot_sdk/go2_robot_sdk/: arm_test.py
ros2_test_ws/src/go2_robot_sdk/launch/: master.launch.py
ros2_test_ws/src/go2_robot_sdk/urdf/: go2.urdf
ros2_test_ws/src/nav_search/: CMakeLists.txt  package.xml
ros2_test_ws/src/nav_search/action/: DetectTarget.action  Nav2Move.action  RotateAndMoveShortDistance.action  RunSearchTree.action  ScanArea.action  SearchNear.action
ros2_test_ws/src/nav_search/include/nav_search/: search_and_approach.hpp
ros2_test_ws/src/nav_search/scripts/: yolo_node.py
ros2_test_ws/src/nav_search/src/: arm_scan.cpp  nav2_move.cpp  recheck_area.cpp  rotate_and_move.cpp  search_bt_runner.cpp
ros2_test_ws/src/nav_search/trees/: search_and_approach.xml
ros2_working/: 3d_map.ply
ros2_working/src/: test.txt
ros2_working/src/d1_550_description/: CMakeLists.txt
ros2_working/src/d1_550_description/urdf/: d1_550_description.csv
ros2_working/src/d1_moveit_config/: CMakeLists.txt  package.xml
ros2_working/src/d1_moveit_config/config/: d1_550_description.ros2_control.xacro  kinematics.yaml  moveit.rviz  moveit_controllers.yaml
ros2_working/src/d1_moveit_config/launch/: rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
ros2_working/src/go2_robot_sdk/: setup.py
ros2_working/src/go2_robot_sdk/config/: nav_params.yaml  navsat_params.yaml
ros2_working/src/go2_robot_sdk/go2_robot_sdk/: GPS_secondary.py  GPS_test.py  arm_test.py
ros2_working/src/go2_robot_sdk/go2_robot_sdk/infrastructure/ros2/: ros2_publisher.py
ros2_working/src/go2_robot_sdk/go2_robot_sdk/presentation/: go2_driver_node.py
ros2_working/src/go2_robot_sdk/launch/: robot.launch.py
ros2_working/src/interbotix_ros_core/Arm_package/: main_method.py
ros2_working/src/lidar_processor_cpp/src/: lidar_to_pointcloud_node.cpp
ros2_working/src/nav_search/: CMakeLists.txt  package.xml
ros2_working/src/nav_search/scripts/: arm_test.py  yolo_node.py  yolo_node_old.py
ros2_working/src/nav_search/src/: arm_search.cpp  arm_search_rev6.cpp  best_arm.cpp
