<?xml version="1.0"?>
<package format="3">
  <name>d1_550_description</name>
  <version>1.0.0</version>

  <description>
    URDF Description package for d1_550_description.
    This package contains configuration data, 3D models, and launch files
    for the d1_550_description robot.
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core description stack -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <!-- If your URDF is xacro-based, keep this -->
  <exec_depend>xacro</exec_depend>

  <!-- ROS 2 RViz package name -->
  <exec_depend>rviz2</exec_depend>

  <!-- ROS 2 Gazebo integration is different; include these only if you actually use Gazebo in this package -->
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>

